# OpenGL-Tutorial

./: CMakeLists.txt
includes/: shader.hpp
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
includes/settings/: settings.hpp
includes/shaders/triangle/: fShader.glsl
shaders/triangle/: fShader.glsl  skibidabopmmdada.glsl  vShader.glsl
src/: main.cpp  shader.cpp
